base 3/db-backup.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: autonumber-allow-ingress-for-backup
  labels:
    app.kubernetes.io/component: backup
    app.kubernetes.io/part-of: autonumber
    part-of: autonumber
  annotations:
    description: "Allow PostgreSQL access from the logical backup job"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: database
      part-of: autonumber
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: backup
              part-of: autonumber
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: autonumber-allow-psql-from-logical-backup-job
  labels:
    app.kubernetes.io/component: backup
    app.kubernetes.io/part-of: autonumber
    part-of: autonumber
  annotations:
    description: "Allow PostgreSQL access from the logical backup job"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: backup
      part-of: autonumber
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: database
              part-of: autonumber
      ports:
        - protocol: TCP
          port: 5432
